test/Fail/Issue2467.err
Issue2467.agda:8,1-18: error: [NoBindingForBuiltin]
No binding for builtin thing REWRITE, use {-# BUILTIN REWRITE name
#-} to bind it to 'name'
when checking the pragma REWRITE A
